--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "core-js": "2.6.4",
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
-    "ngx-clipboard": "11.1.9",
+    "ngx-clipboard": "^12.3.0",
     "ngx-toastr": "9.1.2",
     "nouislider": "13.1.1",
     "path": "^0.12.7",
