--- a/package.json
+++ b/package.json
@@ -25,14 +25,15 @@
     "@angular/platform-browser-dynamic": "8.2.14",
     "@angular/router": "8.2.14",
     "@ng-bootstrap/ng-bootstrap": "^4.0.1",
-    "bootstrap": "4.1.3",
+    "bootstrap": "^4.4.1",
     "chart.js": "2.7.3",
     "clipboard": "2.0.4",
     "core-js": "2.6.4",
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
+    "jwt-decode": "^2.2.0",
     "ngx-clipboard": "^12.3.0",
-    "ngx-toastr": "9.1.2",
+    "ngx-toastr": "^9.1.2",
     "nouislider": "13.1.1",
     "path": "^0.12.7",
     "rxjs": "^6.5.4",
@@ -49,7 +50,7 @@
     "codelyzer": "4.5.0",
     "jasmine-core": "3.3.0",
     "jasmine-spec-reporter": "4.2.1",
-    "karma": "4.0.0",
+    "karma": "^4.4.1",
     "karma-chrome-launcher": "2.2.0",
     "karma-coverage-istanbul-reporter": "2.0.4",
     "karma-jasmine": "2.0.1",
