--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "@angular/compiler": "8.2.14",
     "@angular/core": "^8.2.14",
     "@angular/forms": "8.2.14",
-    "@angular/http": "7.2.4",
+    "@angular/http": "^7.2.16",
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "8.2.14",
     "@angular/platform-browser-dynamic": "8.2.14",
     "@angular/router": "8.2.14",
-    "@ng-bootstrap/ng-bootstrap": "^4.0.1",
-    "bootstrap": "^4.4.1",
+    "@ng-bootstrap/ng-bootstrap": "^5.2.1",
+    "bootstrap": "^4.2.1",
     "chart.js": "2.7.3",
     "clipboard": "2.0.4",
     "core-js": "2.6.4",
@@ -40,7 +40,7 @@
     "zone.js": "0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.23",
+    "@angular-devkit/build-angular": "^0.803.25",
     "@angular/cli": "^8.3.23",
     "@angular/compiler-cli": "8.2.14",
     "@angular/language-service": "8.2.14",
@@ -55,6 +55,7 @@
     "karma-coverage-istanbul-reporter": "2.0.4",
     "karma-jasmine": "2.0.1",
     "karma-jasmine-html-reporter": "1.4.0",
+    "node-sass": "^4.13.1",
     "protractor": "5.4.2",
     "ts-node": "8.0.2",
     "tslint": "5.12.1",
